# escola-de-programadoras

./: .gitignore  README.md  nlp.py  telegram_bot.py  vision.py
bot/: README.md  downloadImage.py  geminiAI.py  nlp.py  telegramBot.py  vision.py
class/: helloWorld.py
projects/: README.md  pyproject.toml
projects/bot/: README.md  downloadImage.py  geminiAI.py
