[tool.poetry]
name = "projects"
version = "0.1.0"
description = ""
authors = ["4L3xD <alessandra.olea@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
google-generativeai = "^0.4.1"
pillow = "^10.2.0"
telepot = "^12.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
